--- a/app/src/main/res/layout/activity_timestamp.xml
+++ b/app/src/main/res/layout/activity_timestamp.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".TimestampScreen">
 
     <TextView
         android:layout_width="wrap_content"
